tests/ui/coherence/impl-foreign[foreign]-for-foreign.stderr
error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/impl-foreign[foreign]-for-foreign.rs:10:1
   |
LL | impl Remote1<u32> for f64 {
   | ^^^^^------------^^^^^---
   |      |                |
   |      |                `f64` is not defined in the current crate
   |      `u32` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0117`.
